# PD2

./: README.md  aircraft_identification.ipynb  preprocess_mapa (2).csv  pruebaCSV5.csv  pyproject.toml
assets/capturas/: metadata.txt
assets/js/: plane_click.js
data/ex1/: datos_aire_tierra.csv  eventos_espera_semana.csv  eventos_espera_semana_nuevo  preprocessed_ex1.csv  preprocessed_ex2.csv
data/ex2/: preprocess_mapa_mini.csv
docs/: ads-b.MD  airbone_velocity.MD  descripcion_crudo.MD  problemas.MD
pruebaTiemposEspera/: prueba.py  prueba2.py
src/: airbone_velocity.py  airborne_position.py  aircraft_identification.py  dask_ex1.py  dask_ex2.py  main.py  map_visualization.py  procesado_aire_tierra.py  procesado_mapa.py  procesado_tiempos_espera_1.py  procesado_tiempos_espera_2.py  surface_position.py  test.csv  utils.py  visualization.ipynb
src/exploracion/: ALL_exploracion_mapa.ipynb  ALL_exploracion_tiempos_espera.ipynb  aire_tierra.ipynb  despegues.ipynb  mapa.ipynb
src/utils/: __init__.py  airbone_velocity.py  airborne_position.py  aircraft_identification.py  general_helpers.py  message_type.py  surface_position.py
src/visualization/: map_visualization.py  visualization.ipynb
src/visualization/aire_tierra/: aire_tierra_visualisados.ipynb  aire_tierra_visualizados.ipynb  dashboard.py
src/visualization/despegues/: dashboard.py  despegues.ipynb
src/visualization/mapa/: dashboard.py  dynamic_map.py  mapV.py  static_map.py  (+1 more)
temp/: test.py
visualization/: dashboard.py  dask_ex1.py  ex1.ipynb  preprocessing.py
visualization/assets/: styles.css
(+17 files in other folders)
