[project]
name = "1090-riddle"
version = "1.0.0"
description = "Proyecto de Datos desarrollado con los datos de señales ADS-B de aviones"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pymodes>=2.19",
    "folium>=0.19.4",
    "dask>=2025.1.0",
    "pyarrow==17.0.0",
    "seaborn>=0.13.2",
    "plotly>=6.0.0",
    "dash>=2.18.2",
    "missingno>=0.5.2",
    "plotly-express>=0.4.1",
]
